# ChangeVoice

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sinieco/changevoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_sinieco_changevoice_EffectUtils.h  common_platform.cpp  effect_fix.cpp
app/src/main/java/com/sinieco/changevoice/: EffectUtils.java  MainActivity.java  QQVoiceActivity.java  XPermissionUtils.java
app/src/main/res/layout/: activity_main.xml  qq_activity.xml
app/src/test/java/com/sinieco/changevoice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
